--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -402,6 +402,24 @@
                                         'value': 'user.profile.twig'
                                     }
                                 } %}
+
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Права доступа по-умолчанию',
+                                    'type': 'select',
+                                    'name': 'user[access][]',
+                                    'description': [
+                                            '<button class="btn btn-outline-success btn-sm mr-1" type="button" data-access-click="common">Общие</button>',
+                                            '<button class="btn btn-outline-secondary btn-sm mr-1" type="button" data-access-click="cup">Панель управления</button>',
+                                            '<button class="btn btn-outline-info btn-sm mr-1" type="button" data-access-click="api">API</button>',
+                                            '<button class="btn btn-outline-danger btn-sm mr-1" type="button" data-access-click="none">Ничего</button>',
+                                        ]|join(''),
+                                    'args': {
+                                        'multiple': true,
+                                        'option': routes.all,
+                                        'selected': routes.guest,
+                                        'force-value': parameter['user[access]'].value ? parameter['user[access]'].value|split(',') : null
+                                    }
+                                } %}
                             </div>
 
                             {# TAB: Catalog #}
