--- a/theme/default/catalog.category.attributes.twig
+++ b/theme/default/catalog.category.attributes.twig
@@ -9,16 +9,12 @@
             <div class="col-6 col-md-4 col-lg-3 filter-widget">
                 <h2 class="fw-title">{{ attribute.title }}</h2>
                 <ul class="category-menu">
-                    {% set variants = collect() %}
-
-                    {% for product in products.all %}
-                        {% for attr in product.getAttributes().whereIn('attribute_uuid', attribute.uuid) %}
-                            <li>
-                                <a href="{{ non_page_path() }}{{ page ? '/' ~ page : '' }}{{ current_query(attribute.address, attr.value|trim) }}">
-                                    {{ attr.value }}
-                                </a>
-                            </li>
-                        {% endfor %}
+                    {% for attr in attribute.getProductAttributes().unique('value') %}
+                        <li>
+                            <a href="{{ non_page_path() }}{{ page ? '/' ~ page : '' }}{{ current_query(attribute.address, attr.value|trim) }}">
+                                {{ attr.value }}
+                            </a>
+                        </li>
                     {% endfor %}
                 </ul>
             </div>
