add user default group parameter

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -404,15 +404,26 @@
                                 } %}
 
                                 {% include 'cup/field.twig' with {
-                                    'label': 'Права доступа по-умолчанию',
+                                    'label': 'Группа пользователя (по-умолчанию)',
+                                    'type': 'select',
+                                    'name': 'user[group]',
+                                    'description': 'Новый пользователь будет автоматически добавляться в выбранную группу',
+                                    'args': {
+                                        'option': {'': '---'}|merge(groups.pluck('title', 'uuid').all())
+                                    }
+                                } %}
+
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Права доступа (по-умолчанию)',
                                     'type': 'select',
                                     'name': 'user[access][]',
                                     'description': [
-                                            '<button class="btn btn-outline-success btn-sm mr-1" type="button" data-access-click="common">Общие</button>',
-                                            '<button class="btn btn-outline-secondary btn-sm mr-1" type="button" data-access-click="cup">Панель управления</button>',
-                                            '<button class="btn btn-outline-info btn-sm mr-1" type="button" data-access-click="api">API</button>',
-                                            '<button class="btn btn-outline-danger btn-sm mr-1" type="button" data-access-click="none">Ничего</button>',
-                                        ]|join(''),
+                                        'Указанные права доступа так же будут применены для незарегистрированного пользователя<br>',
+                                        '<button class="btn btn-outline-success btn-sm mr-1" type="button" data-access-click="common">Общие</button>',
+                                        '<button class="btn btn-outline-secondary btn-sm mr-1" type="button" data-access-click="cup">Панель управления</button>',
+                                        '<button class="btn btn-outline-info btn-sm mr-1" type="button" data-access-click="api">API</button>',
+                                        '<button class="btn btn-outline-danger btn-sm mr-1" type="button" data-access-click="none">Ничего</button>',
+                                    ]|join(''),
                                     'args': {
                                         'multiple': true,
                                         'option': routes.all,
