--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -69,7 +69,7 @@
                                             'label': 'Категория',
                                             'type': 'select',
                                             'name': 'category',
-                                            'message': '<a href="/cup/catalog/category/add" class="btn btn-xs btn-info float-right"><i class="fa fa-plus"></i> Добавить категорию</a>',
+                                            'message': '<a href="/cup/catalog/category/add" class="btn btn-xs btn-info float-right" onclick="return confirm(\'Вы действительно хотите перейти на другую страницу?\');"><i class="fa fa-plus"></i> Добавить категорию</a>',
                                             'args': {
                                                 'option': categories.pluck('title', 'uuid').all(),
                                                 'selected': item.category ?? category.uuid
@@ -317,7 +317,9 @@
                                         {% include 'cup/form.twig' with {
                                             'label': 'Атрибуты',
                                             'type': 'select',
-                                            'message': '<p class="float-left">Укажите индивидуальные атрибуты для товара</p><button class="btn btn-xs btn-secondary float-right" type="button"><i class="fa fa-plus"></i> Добавить поле</button>',
+                                            'message': '<p class="float-left">Укажите индивидуальные атрибуты для товара</p>'~
+                                                       '<button class="btn btn-xs btn-secondary float-right" type="button">Добавить поле</button>' ~
+                                                       '<a href="/cup/catalog/attribute/add" class="btn btn-xs btn-info mr-1 float-right" onclick="return confirm(\'Вы действительно хотите перейти на другую страницу?\');"><i class="fa fa-plus"></i> Добавить атрибут</a>' ,
                                             'args': {
                                                 'option': attributes.pluck('title', 'uuid').all(),
                                                 'data': {'select': 'attributes'}
