--- a/src/Template/cup/sidebar.twig
+++ b/src/Template/cup/sidebar.twig
@@ -6,12 +6,12 @@
         <ul class="nav nav-tabs nav-line nav-color-secondary" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active show" data-toggle="tab" href="#notif">
-                    <i class="fa fa-bell" data-toggle="tooltip" data-placement="bottom" title="Уведомления"></i>
+                    <i class="fa fa-bell"></i>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#task">
-                    <i class="fas fa-tasks" data-toggle="tooltip" data-placement="bottom" title="Фоновые задачи"></i>
+                    <i class="fas fa-tasks"></i>
                 </a>
             </li>
         </ul>
