fix login select identifier

--- a/src/Template/cup/auth/login.twig
+++ b/src/Template/cup/auth/login.twig
@@ -19,7 +19,7 @@
                                     'type': 'email',
                                     'name': 'email'
                                 } %}
-                            {% elseif identifier == 'login' %}
+                            {% elseif identifier == 'username' %}
                                 {% include 'cup/form.twig' with {
                                     'label': 'Логин',
                                     'type': 'text',
