--- a/theme/default/user.login.twig
+++ b/theme/default/user.login.twig
@@ -103,7 +103,7 @@
                                         'name': 'email',
                                     } %}
                                 </div>
-                            {% elseif identifier == 'login' %}
+                            {% elseif identifier == 'username' %}
                                 <div class="form-label-group">
                                     {% include 'mixin/form.twig' with {
                                         'label': 'Логин',
