--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -23,9 +23,19 @@
                                     Общие
                                 </a>
                             </li>
+                            <li>
+                                <a class="nav-link" data-toggle="pill" href="#other-user" role="tab">
+                                    Пользователи
+                                </a>
+                            </li>
                             <li class="nav-item submenu">
                                 <a class="nav-link" data-toggle="pill" href="#catalog" role="tab">
                                     Каталог
+                                </a>
+                            </li>
+                            <li>
+                                <a class="nav-link" data-toggle="pill" href="#other-guestbook" role="tab">
+                                    Гостевая книга
                                 </a>
                             </li>
                             <li class="nav-item submenu">
@@ -50,10 +60,8 @@
                                         <div class="nav flex-column nav-pills nav-secondary">
                                             <a class="nav-link active"  data-toggle="pill" href="#other-common">Основные</a>
                                             <a class="nav-link"         data-toggle="pill" href="#other-mail">Почта</a>
-                                            <a class="nav-link"         data-toggle="pill" href="#other-notification">Уведомления</a>
                                             <a class="nav-link"         data-toggle="pill" href="#other-image">Изображения</a>
-                                            <a class="nav-link"         data-toggle="pill" href="#other-user">Пользователи</a>
-                                            <a class="nav-link"         data-toggle="pill" href="#other-guestbook">Гостевая книга</a>
+                                            <a class="nav-link"         data-toggle="pill" href="#other-notification">Уведомления</a>
                                         </div>
                                     </div>
                                     <div class="col-xs-12 col-sm-7 col-md-8 mt-5 mt-sm-0">
@@ -298,20 +306,6 @@
                                                 } %}
                                             </div>
 
-                                            {# TAB: Other Notification #}
-                                            <div class="tab-pane fade" id="other-notification">
-                                                {% include 'cup/field.twig' with {
-                                                    'label': 'Включить уведомления',
-                                                    'description': '',
-                                                    'type': 'select',
-                                                    'name': 'notification[is_enabled]',
-                                                    'args': {
-                                                        'option': {'yes':'Да', 'no':'Нет'},
-                                                        'selected': 'yes'
-                                                    }
-                                                } %}
-                                            </div>
-
                                             {# TAB: Other Image #}
                                             <div class="tab-pane fade" id="other-image">
                                                 {% include 'cup/field.twig' with {
@@ -358,107 +352,16 @@
                                                 } %}
                                             </div>
 
-                                            {# TAB: Other User #}
-                                            <div class="tab-pane fade" id="other-user">
+                                            {# TAB: Other Notification #}
+                                            <div class="tab-pane fade" id="other-notification">
                                                 {% include 'cup/field.twig' with {
-                                                    'label': 'Метод авторизации на сайте',
-                                                    'description': 'Вы можете выбрать, каким способом будет производиться авторизация пользователей на сайте. Доступно два варианта, либо с использованием своего логина или с использованием E-mail',
+                                                    'label': 'Включить уведомления',
+                                                    'description': '',
                                                     'type': 'select',
-                                                    'name': 'user[login_type]',
+                                                    'name': 'notification[is_enabled]',
                                                     'args': {
-                                                        'option': {'username':'Логин', 'email':'E-Mail', 'phone':'Телефон'}
-                                                    }
-                                                } %}
-
-                                                {% include 'cup/field.twig' with {
-                                                    'label': 'Шаблон страницы авторизации',
-                                                    'type': 'text',
-                                                    'name': 'user[login_template]',
-                                                    'args': {
-                                                        'placeholder': 'user.login.twig',
-                                                        'value': 'user.login.twig'
-                                                    }
-                                                } %}
-
-                                                {% include 'cup/field.twig' with {
-                                                    'label': 'Шаблон страницы регистрации',
-                                                    'type': 'text',
-                                                    'name': 'user[register_template]',
-                                                    'args': {
-                                                        'placeholder': 'user.register.twig',
-                                                        'value': 'user.register.twig'
-                                                    }
-                                                } %}
-
-                                                {% include 'cup/field.twig' with {
-                                                    'label': 'Шаблон страницы восстановления пароля',
-                                                    'type': 'text',
-                                                    'name': 'user[lostpassword_template]',
-                                                    'args': {
-                                                        'placeholder': 'user.lostpassword.twig',
-                                                        'value': 'user.lostpassword.twig'
-                                                    }
-                                                } %}
-
-                                                {% include 'cup/field.twig' with {
-                                                    'label': 'Шаблон страницы профиля пользователя',
-                                                    'type': 'text',
-                                                    'name': 'user[profile_template]',
-                                                    'args': {
-                                                        'placeholder': 'user.profile.twig',
-                                                        'value': 'user.profile.twig'
-                                                    }
-                                                } %}
-
-                                                {% include 'cup/field.twig' with {
-                                                    'label': 'Группа пользователя (по-умолчанию)',
-                                                    'type': 'select',
-                                                    'name': 'user[group]',
-                                                    'description': 'Новый пользователь будет автоматически добавляться в выбранную группу',
-                                                    'args': {
-                                                        'option': {'': '---'}|merge(groups.pluck('title', 'uuid').all())
-                                                    }
-                                                } %}
-
-                                                {% include 'cup/field.twig' with {
-                                                    'label': 'Права доступа (по-умолчанию)',
-                                                    'type': 'select',
-                                                    'name': 'user[access][]',
-                                                    'description': [
-                                                        'Указанные права доступа так же будут применены для незарегистрированного пользователя<br>',
-                                                        '<button class="btn btn-outline-success btn-sm mr-1" type="button" data-access-click="common">Общие</button>',
-                                                        '<button class="btn btn-outline-secondary btn-sm mr-1" type="button" data-access-click="cup">Панель управления</button>',
-                                                        '<button class="btn btn-outline-info btn-sm mr-1" type="button" data-access-click="api">API</button>',
-                                                        '<button class="btn btn-outline-danger btn-sm mr-1" type="button" data-access-click="none">Ничего</button>',
-                                                    ]|join(''),
-                                                    'args': {
-                                                        'multiple': true,
-                                                        'option': routes.all,
-                                                        'selected': routes.guest,
-                                                        'force-value': parameter['user[access]'].value ? parameter['user[access]'].value|split(',') : null
-                                                    }
-                                                } %}
-                                            </div>
-
-                                            {# TAB: Other Guestbook #}
-                                            <div class="tab-pane fade" id="other-guestbook">
-                                                {% include 'cup/field.twig' with {
-                                                    'label': 'Шаблон раздела',
-                                                    'type': 'text',
-                                                    'name': 'guestbook[template]',
-                                                    'args': {
-                                                        'placeholder': 'guestbook.twig',
-                                                        'value': 'guestbook.twig'
-                                                    }
-                                                } %}
-
-                                                {% include 'cup/field.twig' with {
-                                                    'label': 'Количество товаров на страницу',
-                                                    'type': 'number',
-                                                    'name': 'guestbook[pagination]',
-                                                    'args': {
-                                                        'placeholder': '10',
-                                                        'value': '10'
+                                                        'option': {'yes':'Да', 'no':'Нет'},
+                                                        'selected': 'yes'
                                                     }
                                                 } %}
                                             </div>
@@ -466,6 +369,88 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+
+                            {# TAB: User #}
+                            <div class="tab-pane fade" id="other-user" role="tabpanel">
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Метод авторизации на сайте',
+                                    'description': 'Вы можете выбрать, каким способом будет производиться авторизация пользователей на сайте. Доступно два варианта, либо с использованием своего логина или с использованием E-mail',
+                                    'type': 'select',
+                                    'name': 'user[login_type]',
+                                    'args': {
+                                        'option': {'username':'Логин', 'email':'E-Mail', 'phone':'Телефон'}
+                                    }
+                                } %}
+
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Шаблон страницы авторизации',
+                                    'type': 'text',
+                                    'name': 'user[login_template]',
+                                    'args': {
+                                        'placeholder': 'user.login.twig',
+                                        'value': 'user.login.twig'
+                                    }
+                                } %}
+
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Шаблон страницы регистрации',
+                                    'type': 'text',
+                                    'name': 'user[register_template]',
+                                    'args': {
+                                        'placeholder': 'user.register.twig',
+                                        'value': 'user.register.twig'
+                                    }
+                                } %}
+
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Шаблон страницы восстановления пароля',
+                                    'type': 'text',
+                                    'name': 'user[lostpassword_template]',
+                                    'args': {
+                                        'placeholder': 'user.lostpassword.twig',
+                                        'value': 'user.lostpassword.twig'
+                                    }
+                                } %}
+
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Шаблон страницы профиля пользователя',
+                                    'type': 'text',
+                                    'name': 'user[profile_template]',
+                                    'args': {
+                                        'placeholder': 'user.profile.twig',
+                                        'value': 'user.profile.twig'
+                                    }
+                                } %}
+
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Группа пользователя (по-умолчанию)',
+                                    'type': 'select',
+                                    'name': 'user[group]',
+                                    'description': 'Новый пользователь будет автоматически добавляться в выбранную группу',
+                                    'args': {
+                                        'option': {'': '---'}|merge(groups.pluck('title', 'uuid').all())
+                                    }
+                                } %}
+
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Права доступа (по-умолчанию)',
+                                    'type': 'select',
+                                    'name': 'user[access][]',
+                                    'description': [
+                                        'Указанные права доступа так же будут применены для незарегистрированного пользователя<br>',
+                                        '<button class="btn btn-outline-success btn-sm mr-1" type="button" data-access-click="common">Общие</button>',
+                                        '<button class="btn btn-outline-secondary btn-sm mr-1" type="button" data-access-click="cup">Панель управления</button>',
+                                        '<button class="btn btn-outline-info btn-sm mr-1" type="button" data-access-click="api">API</button>',
+                                        '<button class="btn btn-outline-danger btn-sm mr-1" type="button" data-access-click="none">Ничего</button>',
+                                    ]|join(''),
+                                    'args': {
+                                        'multiple': true,
+                                        'option': routes.all,
+                                        'selected': routes.guest,
+                                        'force-value': parameter['user[access]'].value ? parameter['user[access]'].value|split(',') : null
+                                    }
+                                } %}
                             </div>
 
                             {# TAB: Catalog #}
@@ -751,6 +736,29 @@
                                     </div>
                                 </div>
 
+                            </div>
+
+                            {# TAB: Guestbook #}
+                            <div class="tab-pane fade" id="other-guestbook" role="tabpanel">
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Шаблон раздела',
+                                    'type': 'text',
+                                    'name': 'guestbook[template]',
+                                    'args': {
+                                        'placeholder': 'guestbook.twig',
+                                        'value': 'guestbook.twig'
+                                    }
+                                } %}
+
+                                {% include 'cup/field.twig' with {
+                                    'label': 'Количество товаров на страницу',
+                                    'type': 'number',
+                                    'name': 'guestbook[pagination]',
+                                    'args': {
+                                        'placeholder': '10',
+                                        'value': '10'
+                                    }
+                                } %}
                             </div>
 
                             {# TAB: Plugins #}
