--- a/theme/default/common/header.twig
+++ b/theme/default/common/header.twig
@@ -9,17 +9,24 @@
                         Demo
                     </a>
                 </div>
-                <div class="col-xl-6 col-lg-5"></div>
-                <div class="col-xl-4 col-lg-5">
+                <div class="col-xl-5 col-lg-5"></div>
+                <div class="col-xl-5 col-lg-5">
                     <div class="user-panel">
                         {% include 'common/user.switch.twig' %}
 
-                        <div class="up-item float-right">
+                        <div class="up-item float-right ml-3">
                             <div class="shopping-card">
                                 <i class="flaticon-bag"></i>
                                 <span data-catalog-cart-count>0</span>
                             </div>
                             <a href="/cart">Корзина</a>
+                        </div>
+
+                        <div class="up-item float-right">
+                            <i class="flaticon-search"></i>
+                            <a href="/search">
+                                Поиск
+                            </a>
                         </div>
                     </div>
                 </div>
