fix field name in search user in cup

--- a/src/Template/cup/user/index.twig
+++ b/src/Template/cup/user/index.twig
@@ -26,7 +26,7 @@
                                 {% include 'cup/form.twig' with {
                                     'label': 'Логин',
                                     'type': 'text',
-                                    'name': 'name',
+                                    'name': 'username',
                                     'args': {
                                         'placeholder': 'Pushkin'
                                     }
